--- a/index.html
+++ b/index.html
@@ -464,12 +464,7 @@
                 <p class="w-75 mx-auto text-start  p-3 ">
 
                     <br>
-                    قصة "جولدن يافع كوفي" بدأت عندما انطلقت مجموعة من عشاق القهوة في اليمن برؤية جديدة وطموحة. قاموا
-                    بتأسيس شركة قهوة متخصصة بهدف إعادة إحياء تقليد البن اليافعي واليمني وتسويقه على الساحة العالمية.
-                    باستخدام المعرفة العميقة بالبن اليافعي واهتمامهم بالجودة والتفرد، نجحوا في إنتاج منتجات مميزة تلائم
-                    توقعات العملاء الدوليين. من خلال الالتزام بأعلى معايير الجودة والحصول على شهادة الغذاء والدواء
-                    الأمريكية، نجحت "جولدن يافع كوفي" في بناء سمعة قوية والوصول إلى جمهور عالمي يقدر التراث القهوة
-                    اليمني والجودة الفائقة.
+                خارطة انتشار البن اليمني هي تصوير جغرافي للمناطق التي تنتج وتزرع البن العربي في جمهورية اليمن. تعد اليمن من أهم بلدان العالم في إنتاج هذا النوع من البن الذي يعتبر من أجود أنواع البن على مستوى العالم. يتميز البن اليمني بنكهته الفريدة والغنية والتي تعكس طابع الأرض والمناخ في المناطق التي يزرع فيها
                 </p>
 
                 <div class="coffee_section_2 text-center">
